--- a/style.css
+++ b/style.css
@@ -223,9 +223,18 @@ body {
 @media only screen and (max-width: 768px) {
 
 .indicator{
-  display: none;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background: none;
+}
+.iavailable {
+  box-shadow: inset 0px 0px 0px 2px green;
 }
 
+.inot-available {
+  box-shadow: inset 0px 0px 0px 2px red;
+}
 .availability-info{
   display: none;
 }
