--- a/style.css
+++ b/style.css
@@ -223,6 +223,8 @@ body {
 @media only screen and (max-width: 768px) {
 
 .indicator{
+    top: 0px;
+    left: 0px;
     width: 100%;
     height: 100%;
     border-radius: 15px;
